--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,10 +1,8 @@
 
-
-<h4>Markup</h4>
-
-<canvas width="600" height="600">
-
-</canvas>
+<div class="content">
+  <h1>Canvas aniamtion</h1>
+  <canvas width="600" height="600"></canvas>
+</div>
 
 <style>
   body{
